Add TCP file transfer client and document build/run steps